webserf/crawler-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler
  labels:
    app: webserf
    component: crawler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserf
      component: crawler
  template:
    metadata:
      name: crawler
      labels:
        app: webserf
        component: crawler
    spec:
      containers:
      - image: itokareva/crawler:2.0
        name: crawler
        ports:
        - containerPort: 8000
          name: crawler
          protocol: TCP
        resources:
          requests:
            cpu: 500m
        args: [ "https://vitkhab.github.io/search_engine_test_site"]
