webserf/mongo-deployment1.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserf-mongodb 
  labels:
    app: webserf 
    component: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserf
      component: mongo
  template:
    metadata:
      name: crawler-db 
      labels:
        app: webserf
        component: mongo
    spec:
      containers:
      - image: mongo:3.2
        name: mongo
        volumeMounts:
        - name: mongo-gce-pd-storage
          mountPath: /data/db
      volumes:
      - name: mongo-gce-pd-storage
        persistentVolumeClaim:
          claimName: mongo-pvc-dynamic
