webserf/ui-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: webserf 
    component: ui
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: webserf
      component: ui
  template:
    metadata:
      name: ui-pod
      labels:
        app: webserf
        component: ui
    spec:
      containers:
      - image: itokareva/crawler_ui:1.0 
        name: ui
        ports:
        - containerPort: 8000
          name: ui
          protocol: TCP
