webserf/mongodb-service1.yml
---
apiVersion: v1
kind: Service
metadata:
  name: webserf-mongodb  
  labels:
    app: webserf 
    component: mongo
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    app: webserf
    component: mongo
