webserf/ui-ingress1.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui 
  annotations:
    kubernetes.io/ingress.class: nginx  
spec:
  rules:
  - host: crawler-ui
  - http:
      paths:
      - backend:
          serviceName: ui
          servicePort: 8000
        path: /
